--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62595415a95eb80009cf0f4c">var s=document.createElement("script");s.src="https://cdn.converteai.net/906522e7-03c4-4f2a-9735-089350da2e69/players/62595415a95eb80009cf0f4c/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <script type="text/javascript" id="scr_62bf928054a6bc000a04d3dd">var s=document.createElement("script");s.src="https://scripts.converteai.net/906522e7-03c4-4f2a-9735-089350da2e69/players/62bf928054a6bc000a04d3dd/player.js",s.async=!0,document.head.appendChild(s);</script>
+            
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/Ai11Mvg" class="a-btn" style="text-decoration: none;">
