--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
     <link rel="stylesheet" href="./assets/css/com.css">
 
+    <link rel="preload" href="https://scripts.converteai.net/906522e7-03c4-4f2a-9735-089350da2e69/players/62bf928054a6bc000a04d3dd/player.js" as="script">
+<link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
+<link rel="preload" href="https://images.converteai.net/906522e7-03c4-4f2a-9735-089350da2e69/players/62bf928054a6bc000a04d3dd/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/906522e7-03c4-4f2a-9735-089350da2e69/62bf922e04d7e7000b83b3d1/playlist.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://cdn.converteai.net">
+<link rel="dns-prefetch" href="https://scripts.converteai.net">
+<link rel="dns-prefetch" href="https://images.converteai.net">
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
+    
     <!-- Título da Página -->
     <title>Protocolo Zero Barriga</title>
     
