--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
 
     <footer class="bg-dark py-3 text-center">
       <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+       <div class="text-white"><a class="text-white">Teste</a></div>
     </footer>
 
     <script type="text/javascript">
