--- a/index.html
+++ b/index.html
@@ -462,14 +462,14 @@
     <footer class="bg-dark py-3 text-center">
       <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
        <div class="text-white"><a class="text-white">Termos e Condições <br>
-              <font size="2"> As informações apresentadas neste site não tem conselho médico e não substitui tratamento e diagnósticos feitos por um profissional. *Resultados podem variar de pessoa para pessoa. Os produtos e serviços vendidos neste site não devem ser interpretados como uma promessa ou garantia de resultados. Seu nível de sucesso em alcançar os resultados divulgados com o uso de nossos produtos e informações depende do tempo que você dedica ao programa, técnicas utilizadas, conhecimento e habilidades diferentes.</font> <br /> 
+              <font size="2"> As informações apresentadas neste site não tem conselho médico e não substitui tratamento e diagnósticos feitos por um profissional. *Resultados podem variar de pessoa para pessoa. Os produtos e serviços vendidos neste site não devem ser interpretados como uma promessa ou garantia de resultados. Seu nível de sucesso em alcançar os resultados divulgados com o uso de nossos produtos e informações depende do tempo que você dedica ao programa, técnicas utilizadas, conhecimento e habilidades diferentes. <br /> 
               Como esses fatores diferem entre cada indivíduo, não podemos garantir o sucesso ou o nível de resultado, nem somos responsáveis por qualquer de suas ações.
               Todas e quaisquer declarações prospectivas contidas neste site ou em qualquer um de nossos produtos destinam-se a expressar a nossa opinião sobre os resultados potenciais que algumas pessoas podem alcançar. <br>
               Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook. Depois que você sair do Facebook, a responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e mostrar todas as provas do produto e usamos resultados reais. <br>
 
               Atendimento através: suporte@felizdenovo.online <br>
               © 2022 – Protocolo Zero Barriga. Todos os direitos reservados. <br>
-              Este site não faz parte nem é endosado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc. <br>
+              Este site não faz parte nem é endosado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</font> <br>
          </a></div>
     </footer>
 
