--- a/index.html
+++ b/index.html
@@ -462,9 +462,11 @@
     <footer class="bg-dark py-3 text-center">
       <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
        <div class="text-white"><a class="text-white">Termos e Condições <br>
+         div {
+           margin-top: 10px;
               <p> <font size="2"> As informações apresentadas neste site não tem conselho médico e não substitui tratamento e diagnósticos feitos por um profissional. *Resultados podem variar de pessoa para pessoa. Os produtos e serviços vendidos neste site não devem ser interpretados como uma promessa ou garantia de resultados. Seu nível de sucesso em alcançar os resultados divulgados com o uso de nossos produtos e informações depende do tempo que você dedica ao programa, técnicas utilizadas, conhecimento e habilidades diferentes. <br /> 
               Como esses fatores diferem entre cada indivíduo, não podemos garantir o sucesso ou o nível de resultado, nem somos responsáveis por qualquer de suas ações.
-              Todas e quaisquer declarações prospectivas contidas neste site ou em qualquer um de nossos produtos destinam-se a expressar a nossa opinião sobre os resultados potenciais que algumas pessoas podem alcançar. <br> </p>
+              Todas e quaisquer declarações prospectivas contidas neste site ou em qualquer um de nossos produtos destinam-se a expressar a nossa opinião sobre os resultados potenciais que algumas pessoas podem alcançar. <br> </p> }
               Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook. Depois que você sair do Facebook, a responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e mostrar todas as provas do produto e usamos resultados reais. <br>
 
               Atendimento através: suporte@felizdenovo.online <br>
