--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       }
     </style>
     
+    <meta name="facebook-domain-verification" content="vzenizkn9dxyrtqzohx9upl6rbbqy1" />
+    
 <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
