--- a/pz/index.html
+++ b/pz/index.html
@@ -516,8 +516,7 @@
                             </span>
                             <br />
                             <span id="c-1"
-                              >Esse vídeo me ajudou muuito. Queimei 4kg com esse
-                              ritual matinal 🙏 🙏</span
+                              >Wow, realmente valió la pena verlo hasta el final, mis amigos aquí de São Paulo están locos por mi resultado, lo he estado aplicando durante dos semanas este protocolo y hasta mi esposo volvio a buscarme... 😘</span
                             >
                           </td>
                         </tr>
@@ -553,10 +552,7 @@
                             </span>
                             <br />
                             <span id="c-2"
-                              >To fazendo faz 1 semana e ja vi mt diferenca,
-                              minha calça que antes ficava apertada n fica mais,
-                              tenho mais energia, sou mais produtiva e o melhor,
-                              to perdendo mt banha kkkk</span
+                              >Después de algunas semanas de aplicar estos consejos tengo que decir… hice las paces con el espejo 😍, mi calidad de vida ha mejorado mucho, perdí la inseguridad y hoy me siento más segura conmigo misma…</span
                             >
                           </td>
                         </tr>
@@ -591,13 +587,7 @@
                               <name id="nome-3">Mariana Martins</name><br />
                             </span>
                             <span id="c-3"
-                              >Oi Doutor. Me chamo Nanda e tenho 48 anos. Eu
-                              tinha 113kg antes de ver esse video, meus exames
-                              estavam péssimos e eu tava quase diabética. Faz 1
-                              mes e meio que eu to fazendo o ritual todos os
-                              dias de manhã, e ja perdi 10kg, minha pressão tá
-                              normal dnv e minha autoestima tá voltando cada dia
-                              mais. Muito obrigada</span
+                              >Hace años que no me siento tan bien como antes... No me había sentido tan bien desde que tenía 23 años... Estoy muy feliz, confiado, totalmente dispuesto y encajándome en mi ropa favorita... Mi esposo no deja de preguntar que que hizo me alaba...</span
                             >
                           </td>
                         </tr>
@@ -633,8 +623,7 @@
                             </span>
                             <br />
                             <span id="c-4"
-                              >Gente, vale super a pena fazer o teste! Fiz por 2
-                              semanas e consegui eliminar 5 quilos.</span
+                              >Pasé de 120 a 72… Me miré en el espejo y ni me reconocí. ¡Incluso volví con mi esposo al mismo hotel y finalmente tuvimos una noche increíble! ¡Estoy radiante! 😍</span
                             >
                           </td>
                         </tr>
@@ -670,9 +659,7 @@
                             </span>
                             <br />
                             <span id="c-5">
-                              Estou feliz, a 7 meses atrás eu estava com 78kg e
-                              hoje estou com 54kg até postei a respeito no meu
-                              perfil aqui no face o antes e depois 😘😘😘</span
+                              Presté mucha atención a cada detalle de la explicación del video, así que me comprometí todos los días a ponerlo en práctica por la mañana, ¡y lo logré! ¡Pasé de 104 a 75 y quiero perder más!</span
                             >
                           </td>
                         </tr>
@@ -708,8 +695,7 @@
                             </span>
                             <br />
                             <span id="c-9">
-                              Realmente funciona, minha barriga tem diminuído a
-                              cada dia. Obrigada por compartilhar 🥰
+                              Se que muchas mujeres pasan por esto y no saben que hacer para cambiar...
                             </span>
                           </td>
                         </tr>
@@ -745,7 +731,7 @@
                             </span>
                             <br />
                             <span id="c-10">
-                              Emagrece mesmo gente receita testada e aprovada
+                              Poder volver a usar mi vestido favorito a los 50 años sin pisar el gimnasio o restringir mis comidas favoritas en los últimos meses está más allá de mí.
                             </span>
                           </td>
                         </tr>
@@ -782,9 +768,7 @@
                             </span>
                             <br />
                             <span id="c-13">
-                              Maravilhosa melhor de todas fez 7dias tomando e 7
-                              klos já conseguir eliminar tô muito feliz obrigado
-                              😍😍😍
+                              ¡Del 98 al 65! 😍 A los 58, después de 20 años de luchar con mis números en la balanza, ¡por fin puedo volver a ponerme mis jeans!
                             </span>
                           </td>
                         </tr>
@@ -821,13 +805,7 @@
                               </span>
                               <br />
                               <span id="c-14">
-                                Eu já estou tomando, já eliminei 7 kls, já fez
-                                muita diferença, minhas roupas estavam todas
-                                apertadas, ágora já estão largas, estou num pós
-                                operatório de coluna por isso engordei muito 15
-                                Kg, estava sentindo muita dor agora amenizou
-                                muito depois que emagreci já consigo andar mais
-                                q antes 🙏🙏🙏🙏🙏🙏
+                                Hoy tengo 58 años pero me siento mucho más viva y segura en la playa con mi nuevo bikini.
                               </span>
                             </td>
                           </tr>
@@ -863,8 +841,7 @@
                               </span>
                               <br />
                               <span id="c-18">
-                                Muito Obrigada tem me ajudado e muito,Adorei
-                                ...Durmo super bem e vendo resultado..🌹🥰</span
+                                La boca de mi médico casi se cae al suelo cuando me miró mientras entraba a la oficina para mi chequeo de rutina.</span
                               >
                             </td>
                           </tr>
