--- a/pz/index.html
+++ b/pz/index.html
@@ -121,7 +121,7 @@
               <div class="col-lg-12">
                 <div class="fb-comments" style="margin-top: 5px">
                   <div class="fb-comments-header">
-                    <span class="strong">Mostrando 10 de 163 comentarios</span>
+                    <span class="strong">21 comentarios</span>
                   </div>
                   <div class="fb-comments-wrapper">
                     <table class="fb-comments-comment">
@@ -141,7 +141,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-1">Valesca Silva</name>
+                              <name id="nome-1">Rosa Hernández</name>
                             </span>
                             <br />
                             <span id="c-1"
@@ -151,7 +151,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>59</likes>
                             <date>3 min</date>
                           </td>
@@ -177,7 +177,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-2">Vitória Pereira</name>
+                              <name id="nome-2">Alejandra García</name>
                             </span>
                             <br />
                             <span id="c-2"
@@ -187,7 +187,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>63</likes>
                             <date>7 min</date>
                           </td>
@@ -213,7 +213,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-3">Mariana Martins</name><br />
+                              <name id="nome-3">Juana Martínez</name><br />
                             </span>
                             <span id="c-3"
                               >Hace años que no me siento tan bien como antes... No me había sentido tan bien desde que tenía 23 años... Estoy muy feliz, confiado, totalmente dispuesto y encajándome en mi ropa favorita... Mi esposo no deja de preguntar que que hizo me alaba...</span
@@ -222,7 +222,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>11</likes>
                             <date>15 min</date>
                           </td>
@@ -248,7 +248,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-4">Juliana Castro</name>
+                              <name id="nome-4">Francisca López</name>
                             </span>
                             <br />
                             <span id="c-4"
@@ -258,7 +258,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>62</likes>
                             <date>37 min</date>
                           </td>
@@ -284,7 +284,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-5">Isabella Lopes</name>
+                              <name id="nome-5">Margarita González</name>
                             </span>
                             <br />
                             <span id="c-5">
@@ -294,7 +294,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>88</likes>
                             <date>55 min</date>
                           </td>
@@ -320,7 +320,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-9">Roberta Gomes</name>
+                              <name id="nome-9">Yolanda Flores</name>
                             </span>
                             <br />
                             <span id="c-9">
@@ -330,7 +330,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>44</likes>
                             <date>1 h</date>
                           </td>
@@ -356,7 +356,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-10">Rafaela Souza</name>
+                              <name id="nome-10">Guadalupe Pérez</name>
                             </span>
                             <br />
                             <span id="c-10">
@@ -366,7 +366,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>51</likes>
                             <date>1 h</date>
                           </td>
@@ -393,7 +393,7 @@
                         <tr>
                           <td class="fb-comments-comment-text">
                             <span class="fb-comments-comment-name">
-                              <name id="nome-13">Ana Sofia</name>
+                              <name id="nome-13">Paulina Sánchez</name>
                             </span>
                             <br />
                             <span id="c-13">
@@ -403,7 +403,7 @@
                         </tr>
                         <tr>
                           <td class="fb-comments-comment-actions">
-                            <like>Curtir</like> · <reply>Responder</reply> ·
+                            <like>Like</like> · <reply>Respuesta</reply> ·
                             <likes>82</likes>
                             <date>2 h</date>
                           </td>
@@ -430,7 +430,7 @@
                           <tr>
                             <td class="fb-comments-comment-text">
                               <span class="fb-comments-comment-name">
-                                <name id="nome-14">Laura Flores</name>
+                                <name id="nome-14">Paola Abundis</name>
                               </span>
                               <br />
                               <span id="c-14">
@@ -440,7 +440,7 @@
                           </tr>
                           <tr>
                             <td class="fb-comments-comment-actions">
-                              <like>Curtir</like> · <reply>Responder</reply> ·
+                              <like>Like</like> · <reply>Respuesta</reply> ·
                               <likes>90</likes>
                               <date>3 h</date>
                             </td>
@@ -466,7 +466,7 @@
                           <tr>
                             <td class="fb-comments-comment-text">
                               <span class="fb-comments-comment-name">
-                                <name id="nome-18">Daniela Costa</name>
+                                <name id="nome-18">Melanie Chinchurreta</name>
                               </span>
                               <br />
                               <span id="c-18">
@@ -476,7 +476,7 @@
                           </tr>
                           <tr>
                             <td class="fb-comments-comment-actions">
-                              <like>Curtir</like> · <reply>Responder</reply> ·
+                              <like>Like</like> · <reply>Respuesta</reply> ·
                               <likes>48</likes>
                               <date>4 h</date>
                             </td>
