--- a/pz/index.html
+++ b/pz/index.html
@@ -105,7 +105,7 @@
     <section class="hero py-lg-2 py-sm-2 right px-lg-15 px-sm-1">
       <div class="center px-lg-15">
         <h2 id="headline" class="mt-lg-3 mt-sm-1">
-          6 ingredientes Simples Que Me Ajudaram Muito
+          Esta Simple Vitamina De 6 Ingredientes Cambió La Vida De Mi Esposa
         </h2>
       </div>
       <div class="mt-lg-5 mt-sm-3 mx-auto center max-w-lg-60">
@@ -596,8 +596,8 @@
     <footer class="center px-lg-20 py-lg-1 py-sm-1 px-sm-2 white">
       <p><strong>Copyright 2022</strong><br />Todos os direitos reservados.</p>
       <div class="flex" style="justify-content: center">
-        Termos de Uso
-        <a>&nbsp;|&nbsp; Políticas de Privacidade </a>
+        Terminos de Uso
+        <a>&nbsp;|&nbsp; Política de Privacidad </a>
       </div>
     </footer>
   </body>
